Deltas are modeled as `List`s for better compatibility with JS version