@@ -14,45 +14,43 @@ class DeltaBuilderTest {
 
   @Nested
   public class Constructor {
-    final OpList ops = new OpList();
+    final Delta delta = new Delta();
 
     @BeforeEach
     public void beforeEach() {
-      ops.add(Op.insert("abc"));
-      ops.add(Op.retain(1, AttributeMap.of("color", "red")));
-      ops.add(Op.delete(4));
-      ops.add(Op.insert("def", AttributeMap.of("bold", true)));
-      ops.add(Op.retain(6));
+      delta.add(Op.insert("abc"));
+      delta.add(Op.retain(1, AttributeMap.of("color", "red")));
+      delta.add(Op.delete(4));
+      delta.add(Op.insert("def", AttributeMap.of("bold", true)));
+      delta.add(Op.retain(6));
     }
 
     @Test
     public void empty() {
       var delta = new Delta();
       assertNotNull(delta);
-      assertNotNull(delta.ops);
-      assertEquals(delta.ops.size(), 0);
+      assertEquals(0, delta.size());
     }
 
     @Test
     public void emptyOps() {
       var delta = new Delta().insert("").delete(0).retain(0);
       assertNotNull(delta);
-      assertNotNull(delta.ops);
-      assertEquals(0, delta.ops.size());
+      assertEquals(0, delta.size());
     }
 
     @Test
     public void arrayOfOps() {
-      var delta = new Delta(ops);
-      assertEquals(ops, delta.ops);
+      var delta = new Delta(this.delta);
+      assertEquals(this.delta, delta);
     }
 
     @Test
     public void delta() {
-      var original = new Delta(ops);
+      var original = new Delta(delta);
       var copy = new Delta(original);
-      assertEquals(original.ops, copy.ops);
-      assertEquals(ops, copy.ops);
+      assertEquals(original, copy);
+      assertEquals(delta, copy);
     }
   }
 
@@ -62,30 +60,30 @@ class DeltaBuilderTest {
     @Test
     public void insertText() {
       var delta = new Delta().insert("test");
-      assertEquals(1, delta.ops.size());
-      assertEquals(Op.insert("test"), delta.ops.get(0));
+      assertEquals(1, delta.size());
+      assertEquals(Op.insert("test"), delta.getFirst());
     }
 
     @Test
     public void insertTextNull() {
       var delta = new Delta().insert("test", null);
-      assertEquals(1, delta.ops.size());
-      assertEquals(Op.insert("test"), delta.ops.get(0));
+      assertEquals(1, delta.size());
+      assertEquals(Op.insert("test"), delta.getFirst());
     }
 
     @Test
     public void insertEmbedded() {
       var delta = new Delta().insert(EMBED);
-      assertEquals(1, delta.ops.size());
-      assertEquals(Op.insert(EMBED), delta.ops.get(0));
+      assertEquals(1, delta.size());
+      assertEquals(Op.insert(EMBED), delta.getFirst());
     }
 
     @Test
     public void insertEmbeddedWithAttribute() {
       var attribute = AttributeMap.of("url", "https://plato.mantoux.org", "alt", "Plato");
       var delta = new Delta().insert(EMBED, attribute);
-      assertEquals(1, delta.ops.size());
-      assertEquals(Op.insert(EMBED, attribute), delta.ops.get(0));
+      assertEquals(1, delta.size());
+      assertEquals(Op.insert(EMBED, attribute), delta.getFirst());
     }
 
     /*@Test
@@ -100,8 +98,8 @@ class DeltaBuilderTest {
     @Test
     public void insertTextAttributes() {
       var delta = new Delta().insert("test", AttributeMap.of("bold", true));
-      assertEquals(1, delta.ops.size());
-      assertEquals(Op.insert("test", AttributeMap.of("bold", true)), delta.ops.get(0));
+      assertEquals(1, delta.size());
+      assertEquals(Op.insert("test", AttributeMap.of("bold", true)), delta.getFirst());
     }
 
     @Test
@@ -138,14 +136,14 @@ class DeltaBuilderTest {
     @Test
     public void deletaZero() {
       var delta = new Delta().delete(0);
-      assertEquals(0, delta.ops.size());
+      assertEquals(0, delta.size());
     }
 
     @Test
     public void deletePositive() {
       var delta = new Delta().delete(1);
-      assertEquals(1, delta.ops.size());
-      assertEquals(Op.delete(1), delta.ops.get(0));
+      assertEquals(1, delta.size());
+      assertEquals(Op.delete(1), delta.getFirst());
     }
   }
 
@@ -155,28 +153,28 @@ class DeltaBuilderTest {
     @Test
     public void retainZero() {
       var delta = new Delta().retain(0);
-      assertEquals(0, delta.ops.size());
+      assertEquals(0, delta.size());
     }
 
     @Test
     public void retain() {
       var delta = new Delta().retain(2);
-      assertEquals(1, delta.ops.size());
-      assertEquals(Op.retain(2), delta.ops.get(0));
+      assertEquals(1, delta.size());
+      assertEquals(Op.retain(2), delta.getFirst());
     }
 
     @Test
     public void retainEmptyAttribute() {
       var delta = new Delta().retain(2, new AttributeMap());
-      assertEquals(1, delta.ops.size());
-      assertEquals(Op.retain(2), delta.ops.get(0));
+      assertEquals(1, delta.size());
+      assertEquals(Op.retain(2), delta.getFirst());
     }
 
     @Test
     public void retainWithAttribute() {
       var delta = new Delta().retain(1, AttributeMap.of("bold", true));
-      assertEquals(1, delta.ops.size());
-      assertEquals(Op.retain(1, AttributeMap.of("bold", true)), delta.ops.get(0));
+      assertEquals(1, delta.size());
+      assertEquals(Op.retain(1, AttributeMap.of("bold", true)), delta.getFirst());
     }
 
     @Test
@@ -193,60 +191,60 @@ class DeltaBuilderTest {
     public void pushOnEmpty() {
       var delta = new Delta();
       delta.push(Op.insert("test"));
-      assertEquals(1, delta.ops.size());
+      assertEquals(1, delta.size());
     }
 
     @Test
     public void pushConsecutiveDelete() {
       var delta = new Delta().delete(2);
       delta.push(Op.delete(3));
-      assertEquals(1, delta.ops.size());
-      assertEquals(Op.delete(5), delta.ops.get(0));
+      assertEquals(1, delta.size());
+      assertEquals(Op.delete(5), delta.getFirst());
     }
 
     @Test
     public void pushConsecutiveText() {
       var delta = new Delta().insert("a");
       delta.push(Op.insert("b"));
-      assertEquals(1, delta.ops.size());
-      assertEquals(Op.insert("ab"), delta.ops.get(0));
+      assertEquals(1, delta.size());
+      assertEquals(Op.insert("ab"), delta.getFirst());
     }
 
     @Test
     public void pushConsecutiveTextWithMatchingAttributes() {
       var delta = new Delta().insert("a", AttributeMap.of("bold", true));
       delta.push(Op.insert("b", AttributeMap.of("bold", true)));
-      assertEquals(1, delta.ops.size());
-      assertEquals(Op.insert("ab", AttributeMap.of("bold", true)), delta.ops.get(0));
+      assertEquals(1, delta.size());
+      assertEquals(Op.insert("ab", AttributeMap.of("bold", true)), delta.getFirst());
     }
 
     @Test
     public void pushConsecutiveRetainsWithMatchingAttributes() {
       var delta = new Delta().retain(1, AttributeMap.of("bold", true));
       delta.push(Op.retain(3, AttributeMap.of("bold", true)));
-      assertEquals(1, delta.ops.size());
-      assertEquals(Op.retain(4, AttributeMap.of("bold", true)), delta.ops.get(0));
+      assertEquals(1, delta.size());
+      assertEquals(Op.retain(4, AttributeMap.of("bold", true)), delta.getFirst());
     }
 
     @Test
     public void pushConsecutiveTextWithMismatchedAttributes() {
       var delta = new Delta().insert("a", AttributeMap.of("bold", true));
       delta.push(Op.insert("b"));
-      assertEquals(2, delta.ops.size());
+      assertEquals(2, delta.size());
     }
 
     @Test
     public void pushConsecutiveRetainsWithMismatchedAttributes() {
       var delta = new Delta().retain(1, AttributeMap.of("bold", true));
       delta.retain(3);
-      assertEquals(2, delta.ops.size());
+      assertEquals(2, delta.size());
     }
 
     @Test
     public void pushConsecutiveEmbedsWithMatchingAttributes() {
       var delta = new Delta().insert(EMBED, AttributeMap.of("alt", "Description"));
       delta.push(Op.insert(EMBED, AttributeMap.of("alt", "Some Other Description")));
-      assertEquals(2, delta.ops.size());
+      assertEquals(2, delta.size());
     }
   }
 }
